# Stella

./: README.md  go.mod  macro.go  parser_test.go  tokens.go  transpiler.go
.github/workflows/: go.yml
cli/: formatter.go  main.go
docs/: 0-overview.md  1-variables.md  2-controlflow.md  3-functions.md  4-inbuilts.md
example_setup/: metadata.txt
example_setup/test_module/src/: main.ste
example_setup/test_module/tp/: go.mod  main.go
mask lang/: src.txt  transpiler.go
myLang/: backup.txt  transpiler.go
nvim-plugin/: README.md
nvim-plugin/ftdetect/: stella.lua
nvim-plugin/syntax/: stella.vim
src/: collections.go  dataStructures.go  go.mod  parser.go  scoping.go  src.txt  tokens.go  transpiler.go  types.go
src/cli/: formatter.go  main.go  main.ste  metadata.txt
src/cli_rs/: Cargo.toml
src/cli_rs/src/: build.rs  (+5 more)
src/stella/: Cargo.toml  README.md
src/stella/src/: build.rs  main.rs  new.rs  run.rs  tp.rs
src/stella/testing_docs/src/: main.ste
src/stella/testing_docs/tp/: go.mod  main.go
src/test_src/: arrays_test.st  arrays_test.ste  loop_test.st  loop_test.ste  prime_factorisation.st  syntax_example.ste
src/transpiler/: collections.go  comments.go  loop.go  macro.go  parser.go  parser_test.go  scoping.go  tokens.go  transpiler.go  tuple.go  types.go
stella-lang/: CHANGELOG.md  LICENSE.md  README.md  package.json  stella-lang-0.0.5.vsix  stella-lang-0.1.5.vsix  vsc-extension-quickstart.md
stella-lang/syntaxes/: stella.tmLanguage.json
test/: main.go
test_src/: strings_test.ste
transpiler/: collections.go  comments.go  parser.go
(+15 files in other folders)
